# ddn-book-examples

./: .gitignore  README.md
excel/: default.nix
fib/: default.nix
haskell-diamond-probmlem/: README.md  bar.nix  default.nix  foo.nix  nix-two-deps.cabal  project.nix
haskell-diamond-probmlem/app/: Main.hs
modules/: flake.nix
